--- a/03tailwindprops/.gitignore
+++ b/03tailwindprops/.gitignore
@@ -1,24 +1,28 @@
+# Node modules
+node_modules/
+
+# Build outputs
+dist/
+build/
+.out/
+.next/
+.cache/
+temp/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Env files
+.env
+.env.* 
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules/
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Lock files (optional, ignore if you don’t want to track them)
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
